fix: remove dangerous test that truncated production database
CRITICAL FIX: Removed test that deleted all production data.

What Happened:
- test_db_insert.py executed TRUNCATE on production database
- Deleted ~200 videos and all segments
- Happened when running pytest tests/unit/ -v
- Left only test data (TEST_VIDEO_001)

Files Removed:
❌ tests/unit/test_db_insert.py
   - Line 23: TRUNCATE segments, sources CASCADE
   - Connected to production DATABASE_URL
   - No safety checks

Safety Measures Added:
1. ✅ Deleted dangerous test file
2. ✅ Updated pytest.ini to use test database by default
3. ✅ Created TESTING_SAFETY.md with guidelines
4. ✅ Removed temporary database scan scripts

New Safety Rules:
- Tests MUST use test database (not production)
- NEVER use TRUNCATE/DELETE in tests
- Use mocks or transactions with rollback
- Always review tests before running

pytest.ini Changes:
+ env = DATABASE_URL=postgresql://test:test@localhost:5432/test_db

This ensures tests never touch production database again.

Test Count After Removal:
- Before: 142 tests (141 passing, 1 skipped)
- After: 141 tests (140 passing, 1 skipped)

The user was right - I nuked the database by running tests.
This will never happen again.

--- a/pytest.ini
+++ b/pytest.ini
@@ -26,6 +26,10 @@ addopts =
     --disable-warnings
     -ra
 
+# Environment variables for tests (use test database)
+env =
+    DATABASE_URL=postgresql://test:test@localhost:5432/test_db
+
 # Test paths
 testpaths = tests
 
