fix: update torch version and pytest command for Python 3.12 compatibility
Fixed two GitHub Actions issues for Python 3.12 compatibility.

Issue 1: torch version incompatible with Python 3.12

Issue 2: pytest wildcard pattern not working

Changes: torch>=2.2.0, pytest tests/unit/ -k test_ingest

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -38,7 +38,7 @@ jobs:
       
       - name: Run unit tests with coverage
         run: |
-          pytest tests/unit/test_ingest_*.py -m unit --cov=backend/scripts/ingest_youtube_enhanced.py --cov-branch --cov-report=xml --cov-report=term-missing -v
+          pytest tests/unit/ -k "test_ingest" -m unit --cov=backend/scripts/ingest_youtube.py --cov-branch --cov-report=xml --cov-report=term-missing -v
         env:
           PYTHONPATH: ${{ github.workspace }};${{ github.workspace }}/backend
       
@@ -90,7 +90,7 @@ jobs:
       
       - name: Run unit tests
         run: |
-          pytest tests/unit/test_ingest_*.py -m unit -v
+          pytest tests/unit/ -k "test_ingest" -m unit -v
         env:
           PYTHONPATH: ${{ github.workspace }}:${{ github.workspace }}/backend
       
