--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,7 +25,6 @@ google-auth-oauthlib==1.1.0
 
 # Text processing and embeddings
 sentence-transformers==2.2.2
-torch==2.0.1
 transformers==4.33.2
 
 # Cross-encoder reranking
@@ -33,9 +32,9 @@ sentence-transformers[cross-encoder]==2.2.2
 
 # Enhanced Audio transcription with latest Whisper models
 faster-whisper>=1.0.2  # Supports large-v3, distil-large-v3, large-v3-turbo
-# Ensure GPU-compatible Torch for RTX 5080 optimization
-torch>=2.1.0,<2.4.0
-torchaudio>=2.1.0,<2.4.0
+# Ensure GPU-compatible Torch for RTX 5080 optimization (Python 3.12 requires >=2.2.0)
+torch>=2.2.0,<2.9.0
+torchaudio>=2.2.0,<2.9.0
 # System monitoring for VRAM tracking
 psutil>=5.9.0
 
