perf: change default WHISPER_PARALLEL_MODELS from 2 to 1
Multi-model Whisper was loading 2 models by default causing slowdown

Single model is faster for sequential processing

Use 2+ models only for batch processing with video queue

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,11 @@ BEAM_SIZE=5
 TEMPERATURE=0.0
 MAX_AUDIO_DURATION=3600
 
+# Parallel Whisper Models (RTX 5080 optimization)
+# WARNING: Set to 1 for single-video processing (faster)
+# Set to 2+ only for batch processing with queue of videos
+WHISPER_PARALLEL_MODELS=1  # Default: 1 model (recommended for most use cases)
+
 # RTX 5080 Concurrency Settings (Balanced for 75-85% GPU)
 IO_WORKERS=24        # Fixed download bottleneck
 ASR_WORKERS=4        # Increased: I/O fixed, can feed 4 workers now
