--- a/.env.example
+++ b/.env.example
@@ -20,10 +20,11 @@ BEAM_SIZE=5
 TEMPERATURE=0.0
 MAX_AUDIO_DURATION=3600
 
-# Parallel Whisper Models (RTX 5080 optimization)
-# WARNING: Set to 1 for single-video processing (faster)
-# Set to 2+ only for batch processing with queue of videos
-WHISPER_PARALLEL_MODELS=1  # Default: 1 model (recommended for most use cases)
+# Parallel Whisper Models
+# GPU (CUDA): Set to 1 (GPU parallelizes internally, multi-model is slower)
+# CPU: Set to 2-4 (bypasses Python GIL for true multi-threading)
+WHISPER_PARALLEL_MODELS=1  # Default: 1 for GPU, 2-4 for CPU production
+WHISPER_DEVICE=cuda  # 'cuda' for GPU, 'cpu' for production
 
 # RTX 5080 Concurrency Settings (Balanced for 75-85% GPU)
 IO_WORKERS=24        # Fixed download bottleneck
