perf: enable 2 models by default for RTX 5080 GPU utilization
Single model only uses 44% GPU and 6-7GB VRAM (underutilized)

Two models use 80-90% GPU and 12-14GB VRAM (optimal)

Changed default WHISPER_PARALLEL_MODELS from 1 to 2 for GPU

Also reverted to use multi-model pipeline for better parallelism

--- a/.env.example
+++ b/.env.example
@@ -21,9 +21,11 @@ TEMPERATURE=0.0
 MAX_AUDIO_DURATION=3600
 
 # Parallel Whisper Models
-# GPU (CUDA): Set to 1 (GPU parallelizes internally, multi-model is slower)
+# GPU (CUDA): Set to 2 if you have headroom (RTX 5080: 16GB VRAM, can fit 2 models)
+#             Single model uses ~6-7GB, leaves room for 2nd model
+#             Use 2 models if GPU util < 50% with single model
 # CPU: Set to 2-4 (bypasses Python GIL for true multi-threading)
-WHISPER_PARALLEL_MODELS=1  # Default: 1 for GPU, 2-4 for CPU production
+WHISPER_PARALLEL_MODELS=2  # 2 for GPU with headroom, 2-4 for CPU production
 WHISPER_DEVICE=cuda  # 'cuda' for GPU, 'cpu' for production
 
 # RTX 5080 Concurrency Settings (Balanced for 75-85% GPU)
