--- a/.env.example
+++ b/.env.example
@@ -21,18 +21,19 @@ TEMPERATURE=0.0
 MAX_AUDIO_DURATION=3600
 
 # Parallel Whisper Models
-# GPU (CUDA): Set to 2 if you have headroom (RTX 5080: 16GB VRAM, can fit 2 models)
-#             Single model uses ~6-7GB, leaves room for 2nd model
-#             Use 2 models if GPU util < 50% with single model
+# GPU (CUDA): Set to 1 (GPU batches internally, multi-model adds overhead)
+#             Increase ASR_WORKERS instead for parallelism
 # CPU: Set to 2-4 (bypasses Python GIL for true multi-threading)
-WHISPER_PARALLEL_MODELS=2  # 2 for GPU with headroom, 2-4 for CPU production
+WHISPER_PARALLEL_MODELS=1  # 1 for GPU (use ASR_WORKERS for parallelism), 2-4 for CPU
 WHISPER_DEVICE=cuda  # 'cuda' for GPU, 'cpu' for production
 
-# RTX 5080 Concurrency Settings (Balanced for 75-85% GPU)
-IO_WORKERS=24        # Fixed download bottleneck
-ASR_WORKERS=4        # Increased: I/O fixed, can feed 4 workers now
+# RTX 5080 Concurrency Settings (Optimized for 80-90% GPU)
+IO_WORKERS=24        # Download queue
+ASR_WORKERS=8        # 8-12 workers to keep GPU saturated (GPU batches internally)
+                     # Single model can handle multiple workers via CUDA streams
+                     # Increase until GPU util reaches 80-90%
 DB_WORKERS=12
-BATCH_SIZE=1024      # Tripled: Use available VRAM (9.6GB unused)
+BATCH_SIZE=1024      # Large batches for GPU efficiency
 
 # Segment Optimization (for better semantic search)
 SEGMENT_MIN_CHARS=1100    # Minimum chars for optimal segments
