refactor: rename transcribe_with_whisper_fallback to transcribe_with_faster_whisper
Old name was misleading - this is the primary optimized method

Updated all 4 call sites to use new name

Clarified: 1 model + high ASR_WORKERS is fastest for GPU

--- a/.env.example
+++ b/.env.example
@@ -21,17 +21,23 @@ TEMPERATURE=0.0
 MAX_AUDIO_DURATION=3600
 
 # Parallel Whisper Models
-# GPU (CUDA): Set to 1 (GPU batches internally, multi-model adds overhead)
-#             Increase ASR_WORKERS instead for parallelism
+# GPU (CUDA): Can use 1 or 2 models
+#   Option 1 (Recommended): 1 model + high ASR_WORKERS (8-12)
+#     - GPU batches internally via CUDA streams
+#     - Simpler, less overhead
+#   Option 2: 2 models + moderate ASR_WORKERS (4-6)
+#     - Each model handles different videos
+#     - Uses more VRAM (12-14GB vs 6-7GB)
+#     - May improve utilization if workers are bottlenecked
 # CPU: Set to 2-4 (bypasses Python GIL for true multi-threading)
-WHISPER_PARALLEL_MODELS=1  # 1 for GPU (use ASR_WORKERS for parallelism), 2-4 for CPU
+WHISPER_PARALLEL_MODELS=1  # Start with 1, try 2 if GPU util < 70%
 WHISPER_DEVICE=cuda  # 'cuda' for GPU, 'cpu' for production
 
 # RTX 5080 Concurrency Settings (Optimized for 80-90% GPU)
 IO_WORKERS=24        # Download queue
-ASR_WORKERS=8        # 8-12 workers to keep GPU saturated (GPU batches internally)
-                     # Single model can handle multiple workers via CUDA streams
-                     # Increase until GPU util reaches 80-90%
+ASR_WORKERS=8        # Start with 8, increase to 12 if GPU util < 80%
+                     # With 1 model: Use 8-12 workers (GPU batches via CUDA)
+                     # With 2 models: Use 4-6 workers (round-robin between models)
 DB_WORKERS=12
 BATCH_SIZE=1024      # Large batches for GPU efficiency
 
