feat: Upgrade to pyannote.audio v4 with exclusive mode
- Update requirements.txt to pyannote.audio>=4.0.0
- Use pyannote/speaker-diarization-community-1 pipeline
- Add exclusive=True for non-overlapping speakers (better Whisper alignment)
- Fix AudioDecoder import error from v3
- Document upgrade process and benefits

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,7 +41,7 @@ psutil>=5.9.0
 
 # Advanced ASR with speaker identification
 whisperx>=3.1.1
-pyannote.audio>=3.1.1
+pyannote.audio>=4.0.0  # v4 with new community pipeline and exclusive mode
 speechbrain>=0.5.16
 librosa>=0.10.1
 soundfile>=0.12.1
