feat: add flexible embedding profile system (quality vs speed)
- Added EMBEDDING_PROFILE env var (quality/speed)
- Quality: GTE-Qwen2-1.5B (1536-dim, 20-30 texts/sec, best quality)
- Speed: BGE-Small (384-dim, 1500-2000 texts/sec, 60-80x faster)
- Profile overrides via individual env vars (EMBEDDING_MODEL, etc.)
- Added EmbeddingsService for BGE embeddings and reranking
- Added FlagEmbedding to requirements.txt
- Updated .env.example with profile documentation

Benefits:
- No database migration needed (columns already support both)
- Toggle between models via .env change
- Optional cross-encoder reranking for BGE-Small (3-5% quality boost)

--- a/.env.example
+++ b/.env.example
@@ -71,10 +71,27 @@ SEGMENT_OVERLAP_CHARS=250       # Overlap between segments (220-300)
 SEGMENT_MAX_GAP_SECONDS=0.75    # Merge across pauses ≥750ms
 SEGMENT_MAX_MERGE_DURATION=90.0 # 60-90 seconds per segment
 
-# Embedding Configuration (GTE-Qwen2-1.5B for best quality)
-EMBEDDING_PROVIDER=local
-EMBEDDING_MODEL=Alibaba-NLP/gte-Qwen2-1.5B-instruct
-EMBEDDING_DIMENSIONS=1536
+# =============================================================================
+# EMBEDDING CONFIGURATION - Choose your model profile
+# =============================================================================
+# Options: 'quality' (GTE-Qwen2-1.5B) or 'speed' (BGE-Small)
+EMBEDDING_PROFILE=quality
+
+# Profile: 'quality' - GTE-Qwen2-1.5B (1536-dim, 20-30 texts/sec, best quality)
+# Profile: 'speed' - BGE-Small (384-dim, 1500-2000 texts/sec, 60-80x faster)
+
+# Advanced: Override profile settings (leave commented to use profile defaults)
+# EMBEDDING_PROVIDER=local
+# EMBEDDING_MODEL=Alibaba-NLP/gte-Qwen2-1.5B-instruct
+# EMBEDDING_DIMENSIONS=1536
+# EMBEDDING_DEVICE=cuda
+# EMBEDDING_BATCH_SIZE=256
+
+# Reranker Configuration (Optional - improves BGE-Small quality by 3-5%)
+ENABLE_RERANKER=false  # Set to 'true' for BGE-Small to recover quality loss
+RERANK_TOP_K=200  # Retrieve this many candidates for reranking
+RETURN_TOP_K=20   # Return this many after reranking
+RERANK_BATCH_SIZE=64
 
 # yt-dlp Configuration
 YTDLP_BIN=yt-dlp
