--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,8 +24,8 @@ google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
 
 # Text processing and embeddings
-sentence-transformers==2.2.2
-transformers==4.33.2
+sentence-transformers>=2.7.0
+transformers>=4.41.0
 
 # Cross-encoder reranking
 sentence-transformers[cross-encoder]==2.2.2
