feat(auth): Add optional password protection with Dr. Chaffee branding
Features:
- Optional password gate controlled by APP_PASSWORD env var
- Beautiful UI with Dr. Chaffee's photo
- Gradient purple background with white card design
- Session persistence via localStorage
- Server-side password validation
- Graceful fallback when no password set

Components:
- PasswordGate component with responsive design
- Auth API endpoints (check, login, verify)
- Dr. Chaffee's photo in password gate and main header
- Comprehensive documentation in PASSWORD_PROTECTION.md

Security:
- Password checked server-side
- Token-based authentication
- Production recommendations included in docs

Usage:
- Set APP_PASSWORD in .env to enable
- Leave empty to disable protection

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=askdrchaffee
 
+# Application Security
+# Set APP_PASSWORD to require password authentication for the frontend
+# Leave empty or unset to disable password protection
+APP_PASSWORD=
+
 # YouTube Configuration
 YOUTUBE_CHANNEL_URL=https://www.youtube.com/@anthonychaffeemd
 YOUTUBE_API_KEY=
