fix: pin Python 3.12 and replace webvtt with webvtt-py
- Add .python-version to use Python 3.12.7 (webvtt not compatible with 3.13)
- Replace webvtt>=0.4.6 with webvtt-py>=0.5.1 (maintained fork)
- webvtt-py is actively maintained and supports Python 3.12+

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -42,7 +42,7 @@ psutil>=5.9.0
 pyannote.audio>=4.0.0  # v4 with new community pipeline and exclusive mode
 speechbrain>=0.5.16  # For voice embeddings (speaker identification)
 soundfile>=0.12.1  # Audio I/O
-webvtt>=0.4.6  # VTT subtitle parsing
+webvtt-py>=0.5.1  # VTT subtitle parsing (maintained fork)
 
 # Date/time parsing
 isodate==0.6.1
