--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,7 +41,7 @@ psutil>=5.9.0
 # Advanced ASR with speaker identification
 pyannote.audio>=4.0.0  # v4 with new community pipeline and exclusive mode
 speechbrain>=0.5.16  # For voice embeddings (speaker identification)
-soundfile>=0.12.1  # Audio I/O
+soundfile>=0.13.1  # Audio I/O (required by pyannote.audio 4.0.0)
 webvtt-py>=0.5.1  # VTT subtitle parsing (maintained fork)
 
 # Date/time parsing
