docs: add comprehensive .env.example files and Render config guide
- Add backend/.env.example with detailed variable descriptions
- Add frontend/.env.example with clear explanations
- Add RENDER_CONFIG.md with complete Render setup guide
- Switch default model to gpt-3.5-turbo (5-10x cost savings)
- Clean up .env files locally (removed duplicates and unused vars)
- Document which env variables to delete from Render backend
- Separate backend web service (2-3 vars) from cron job (~25 vars)

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,47 @@
+# =============================================================================
+# DR. CHAFFEE AI - FRONTEND CONFIGURATION EXAMPLE
+# =============================================================================
+# Copy this file to .env.local for local development
+# For production, set these as environment variables in Vercel/Render
 
-# Frontend Environment Variables for Next.js
-DATABASE_URL=
-OPENAI_API_KEY=
-APP_PASSWORD=
-RAG_SERVICE_URL=http://localhost:8000
-SUMMARIZER_MODEL=gpt-4o
+# =============================================================================
+# DATABASE
+# =============================================================================
+# PostgreSQL connection string (same as backend)
+DATABASE_URL=postgresql://user:password@host:5432/database
+
+# =============================================================================
+# OPENAI
+# =============================================================================
+# OpenAI API key for answer generation
+OPENAI_API_KEY=sk-proj-your_key_here
+
+# Model: gpt-3.5-turbo (5-10x cheaper), gpt-4o (better quality)
+# Recommendation: Start with gpt-3.5-turbo, it's excellent for RAG
+SUMMARIZER_MODEL=gpt-3.5-turbo
+
+# =============================================================================
+# BACKEND SERVICES
+# =============================================================================
+# Embedding service URL for semantic search
+# Local: http://localhost:8001
+# Production: https://your-backend.onrender.com
+EMBEDDING_SERVICE_URL=http://localhost:8001
+
+# =============================================================================
+# ANSWER SETTINGS
+# =============================================================================
+# Number of context chunks to retrieve for answer generation
+# Higher = more context but slower and more expensive
+ANSWER_TOPK=50
+
+# Default answer style: 'concise' or 'detailed'
+ANSWER_STYLE_DEFAULT=concise
+
+# =============================================================================
+# AUTHENTICATION
+# =============================================================================
+# Simple password for admin features (optional for local dev)
+APP_PASSWORD=your_secure_password_here
 
 
