--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^20.10.0",
     "@types/pg": "^8.10.7",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "next": "^15.5.0",
     "pg": "^8.11.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
     "eslint": "^8.55.0",
-    "eslint-config-next": "^15.5.0",
-    "typescript": "^5.3.3"
+    "eslint-config-next": "^15.5.0"
   }
 }
