--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -27,6 +27,7 @@ google-auth-oauthlib==1.1.0
 # Embeddings (lightweight)
 sentence-transformers>=2.7.0
 transformers>=4.41.0
+openai>=1.0.0
 
 # Utilities
 tqdm==4.66.1
