perf: Remove more unused dependencies from production
Removed (not used in API):
- alembic (DB migrations - run manually)
- python-multipart (file uploads - not used)
- aiofiles (async file I/O - not used)
- redis (caching - not used)
- asyncio-throttle (rate limiting - not used)
- aiohttp (HTTP client - not used)
- tqdm (progress bars - not used)
- isodate (date parsing - not used)
- psutil (system monitoring - not used)

Kept (actually used):
- psycopg2-binary (database queries)
- sqlalchemy (ORM)
- python-dotenv (env vars)
- fastapi (web framework)
- uvicorn (ASGI server)
- openai (answer generation)

Result: ~15 packages instead of ~30
Build time: <1 minute
Image size: ~100MB

--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -3,27 +3,14 @@
 # We use Nomic API for embeddings (cloud-based, no local models needed)
 # Heavy packages are only needed for ingestion scripts (run separately)
 
-# Core dependencies
+# Core database
 psycopg2-binary>=2.9.9
-alembic>=1.13.0
 sqlalchemy>=2.0.07
 python-dotenv==1.0.0
 
-# Web API dependencies
+# Web API (FastAPI + ASGI server)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-aiofiles==23.2.1
-
-# Database and async
-redis==5.0.1
-asyncio-throttle==1.0.2
-aiohttp==3.9.1
 
 # OpenAI for answer generation (lightweight SDK)
 openai>=1.0.0
-
-# Utilities
-tqdm==4.66.1
-isodate==0.6.1
-psutil>=5.9.0
