fix: Add python-multipart back (required for admin upload endpoints)
Issue: Admin endpoints use UploadFile which requires python-multipart
FastAPI throws RuntimeError at startup if it's missing

Fix: Added python-multipart==0.0.6 back to requirements

This is a tiny package (~45KB) and necessary for the admin file upload
endpoints even if they're not heavily used in production.

--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -11,6 +11,7 @@ python-dotenv==1.0.0
 # Web API (FastAPI + ASGI server)
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+python-multipart==0.0.6  # Required for file upload endpoints
 
 # OpenAI for answer generation (lightweight SDK)
 openai>=1.0.0
