--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -13,5 +13,8 @@ fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6  # Required for file upload endpoints
 
+# HTTP client for Nomic API calls
+requests>=2.31.0
+
 # OpenAI for answer generation (lightweight SDK)
 openai>=1.0.0
