--- a/backend/requirements-render.txt
+++ b/backend/requirements-render.txt
@@ -7,6 +7,7 @@
 psycopg2-binary>=2.9.9
 sqlalchemy>=2.0.07
 python-dotenv==1.0.0
+alembic>=1.13.0  # Database migrations (required for pre-deploy)
 
 # Web API (FastAPI + ASGI server)
 fastapi==0.104.1
