feat: Make ANSWER_TOPK configurable via environment variable
Changes:
- Reduced default from 50 to 30 chunks for better answer quality
- Too many chunks can dilute context and reduce coherence
- Now configurable via ANSWER_TOPK env var
- Updated .env.example with recommendations:
  * 20-30 for focused answers
  * 40-50 for comprehensive answers

Users can now tune chunk count without code changes by setting
ANSWER_TOPK in Render environment variables

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -32,8 +32,10 @@ EMBEDDING_SERVICE_URL=http://localhost:8001
 # ANSWER SETTINGS
 # =============================================================================
 # Number of context chunks to retrieve for answer generation
-# Higher = more context but slower and more expensive
-ANSWER_TOPK=50
+# Recommended: 20-30 for focused answers, 40-50 for comprehensive
+# Too many chunks can dilute quality and increase cost
+# Default: 30
+ANSWER_TOPK=30
 
 # Default answer style: 'concise' or 'detailed'
 ANSWER_STYLE_DEFAULT=concise
