docs: add documentation for UX improvements and optimizations
- Add PHASE_1_COMPLETE.md for toggle redesign
- Add PHASES_2_3_COMPLETE.md for stats and loading
- Add TOGGLE_DESIGN_UPDATE.md for design specs
- Add SESSION_COMPLETE.md for full summary
- Add optimization docs (CRON, DATABASE, RENDER)
- Add migration guides

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,9 @@ fix_secrets.ps1
 # Environment config files
 RENDER_CRON_ENV_CLEAN.txt
 YOUTUBE_DOWNLOAD_SETUP.md
+# Database backups
+backup*.sql
+backup*.dump
+
+# Vercel config (auto-detected)
+frontend/vercel.json
