feat: Docker-based setup with optimized ingestion pipeline
- Add docker-compose.dev.yml with PostgreSQL, Redis, Backend, Frontend
- Optimize Dockerfile with staged dependency installation
- Create requirements-simple.txt with pre-built wheels for faster builds
- Add frontend Dockerfile.dev for development
- Create npm scripts for Docker management (setup, start, stop, logs, ingest)
- Add setup automation scripts (setup.js, setup-backend.js, docker-setup.ps1, docker-setup.sh)
- Add comprehensive documentation (DOCKER_SETUP.md, QUICKSTART.md, TROUBLESHOOTING.md, etc.)
- Update README with Docker-first approach
- All services containerized and ready for production
- Ingestion pipeline tested and working with voice profile support

--- a/package.json
+++ b/package.json
@@ -3,16 +3,32 @@
   "version": "1.0.0",
   "description": "Dr. Chaffee AI Assistant - Single Instance Deployment",
   "scripts": {
-    "start:all": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
-    "start:frontend": "cd frontend && npm start",
-    "start:backend": "cd backend && uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}",
+    "setup": "node scripts/setup.js",
+    "setup:backend": "node scripts/setup-backend.js",
+    "setup:frontend": "cd frontend && npm install",
+    "docker:setup": "docker-compose -f docker-compose.dev.yml up -d --build",
+    "docker:start": "docker-compose -f docker-compose.dev.yml up -d",
+    "docker:stop": "docker-compose -f docker-compose.dev.yml down",
+    "docker:restart": "docker-compose -f docker-compose.dev.yml restart",
+    "docker:logs": "docker-compose -f docker-compose.dev.yml logs -f",
+    "docker:reset": "docker-compose -f docker-compose.dev.yml down -v && docker-compose -f docker-compose.dev.yml up -d",
+    "docker:ingest": "docker-compose -f docker-compose.dev.yml exec backend python scripts/ingest_youtube.py --limit 10",
+    "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\"",
+    "start:frontend": "cd frontend && npm run dev",
+    "start:backend": "cd backend && python -m uvicorn main:app --reload --host 0.0.0.0 --port 8000",
+    "start:docker": "docker-compose up -d",
+    "stop": "docker-compose down",
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
     "dev:frontend": "cd frontend && npm run dev",
     "dev:backend": "cd backend && python -m uvicorn main:app --reload",
     "build": "cd frontend && npm run build",
     "test": "npm run test:frontend && npm run test:backend",
     "test:frontend": "cd frontend && npm test",
-    "test:backend": "pytest tests/unit/"
+    "test:backend": "pytest tests/unit/",
+    "ingest": "cd backend && python scripts/ingest_youtube.py",
+    "ingest:test": "cd backend && python scripts/ingest_youtube.py --limit 10",
+    "db:reset": "docker-compose down -v && docker-compose up -d",
+    "db:status": "docker-compose ps"
   },
   "dependencies": {
     "concurrently": "^8.2.2"
