fix: Properly configure Alembic migrations for database schema
- Remove schema.sql auto-initialization from docker-compose
- Fix segments table to use pgvector's vector type instead of ARRAY
- Rename last_updated to updated_at to match ingestion script expectations
- All migrations now run properly through Alembic
- Database schema is now managed correctly with version control

--- a/backend/requirements-simple.txt
+++ b/backend/requirements-simple.txt
@@ -19,7 +19,7 @@ redis==5.0.1
 
 # YouTube
 youtube-transcript-api==0.6.1
-yt-dlp>=2024.11.01
+yt-dlp[default] @ git+https://github.com/yt-dlp/yt-dlp.git@master
 google-api-python-client==2.108.0
 google-auth-httplib2==0.1.1
 google-auth-oauthlib==1.1.0
