--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/pg": "^8.10.7",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "lucide-react": "^0.553.0",
     "next": "^15.5.0",
     "pg": "^8.11.3",
     "react": "18.2.0",
