feat: Enable GPU support for backend container
- Add nvidia-docker GPU reservation to backend service
- Allows CUDA access for faster Whisper transcription
- Requires nvidia-docker and NVIDIA GPU drivers installed
- RTX 5080 will now be used for ingestion pipeline

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -69,6 +69,13 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
     networks:
       - drchaffee-network
 
