fix: Use modern NVIDIA Container Toolkit instead of deprecated nvidia-docker
- Replace deprecated nvidia-docker with runtime: nvidia
- Add NVIDIA_VISIBLE_DEVICES and NVIDIA_DRIVER_CAPABILITIES env vars
- Works with current Docker Desktop GPU support
- Requires NVIDIA Container Toolkit installed on host

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -53,6 +53,8 @@ services:
       - FFMPEG_PATH=ffmpeg
       - WHISPER_CACHE_DIR=/tmp/whisper_cache
       - TEMP_AUDIO_DIR=/tmp/audio_downloads
+      - NVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
     volumes:
       - whisper_cache:/tmp/whisper_cache
       - audio_temp:/tmp/audio_downloads
@@ -69,13 +71,7 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: 1
-              capabilities: [gpu]
+    runtime: nvidia
     networks:
       - drchaffee-network
 
