docs: Add GPU support notes for Windows Docker Desktop
- runtime: nvidia doesn't work on Windows native Docker
- Requires WSL 2 backend + NVIDIA Container Toolkit
- CPU fallback is working (slower but functional)
- Added detailed setup instructions in memory

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -71,7 +71,9 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-    runtime: nvidia
+    # GPU support: requires WSL 2 backend + NVIDIA Container Toolkit
+    # Or use: docker run --gpus all ... on Windows with native Docker
+    # runtime: nvidia  # Uncomment if using Linux or WSL 2 with NVIDIA Container Toolkit
     networks:
       - drchaffee-network
 
