fix: Enable GPU runtime in docker-compose for WSL 2
- Uncomment runtime: nvidia to pass GPU to container
- GPU is now available in backend container
- Should detect RTX 5080 on next ingestion run

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -72,8 +72,7 @@ services:
       retries: 3
       start_period: 40s
     # GPU support: requires WSL 2 backend + NVIDIA Container Toolkit
-    # Or use: docker run --gpus all ... on Windows with native Docker
-    # runtime: nvidia  # Uncomment if using Linux or WSL 2 with NVIDIA Container Toolkit
+    runtime: nvidia
     networks:
       - drchaffee-network
 
