fix: Add EMBEDDING_DEVICE=cuda to enable GPU for embeddings
- Set EMBEDDING_DEVICE=cuda to force PyTorch to use GPU
- Add CUDA_VISIBLE_DEVICES=0 to ensure GPU access
- Should now detect and use RTX 5080 for embeddings

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -55,6 +55,8 @@ services:
       - TEMP_AUDIO_DIR=/tmp/audio_downloads
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+      - EMBEDDING_DEVICE=cuda
+      - CUDA_VISIBLE_DEVICES=0
     volumes:
       - whisper_cache:/tmp/whisper_cache
       - audio_temp:/tmp/audio_downloads
